deps/v8/test/message/modules-import5.out
*%(basename)s:8: SyntaxError: The requested module does not provide an export named 'c'
export {c as a} from "modules-import5.js";
        ^^^^^^
SyntaxError: The requested module does not provide an export named 'c'

